force-app/main/default/objects/Contact_Field_Mapping__mdt/Contact_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Contact Field Mapping</label>
    <pluralLabel>Contact Field Mappings</pluralLabel>
</CustomObject>