force-app/main/default/objects/Contact_Field_Mapping__mdt/fields/Json_Key__c.field-meta.xml
<CustomField>
    <fullName>Json_Key__c</fullName>
    <label>JsonKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>